--- a/directive/checked.html
+++ b/directive/checked.html
@@ -4,6 +4,7 @@
     <h3 class="question">*checked指令的作用</h3>
     <div class="answer">
       <div>“*checked”指令用于绑定宿主元素的选中状态，适用于类型为“radio”和“checkbox”的input元素。</div>
+      <div>对于其他元素，*checked指令将退化为<a href="directive/general" target="_blank">一般指令</a>。</div>
       <div>另外，“*checked”也适用于部分web组件库的自定义元素，如<a href="https://shoelace.style/components/checkbox" target="_blank">sl-checkbox</a>和<a href="https://shoelace.style/components/switch" target="_blank">sl-switch</a>等。我们将在<a href="web-component/introduction">相关章节</a>中进一步介绍。</div>
     </div>
     <h3 class="question">*checked指令表达式的执行结果</h3>
@@ -45,6 +46,7 @@
     <h3 class="question">What is the usage of the *checked directive?</h3>
     <div class="answer">
       <div>The *checked directive is used to bind the checked state of the host element, which is suitable for input elements of type "radio" and "checkbox".</div>
+      <div>For other elements, *checked directive degrades to <a href="directive/general" target="_blank">general directive</a>.</div>
       <div>In addition, *checked can also be used for custom elements in web component libraries, such as <a href="https://shoelace.style/components/checkbox" target="_blank">sl-checkbox</a> and <a href="https://shoelace.style/components/switch" target="_blank">sl-switch</a>. We will introduce it in the <a href="web-component/introduction">corresponding chapter</a>.</div>
     </div>
     <h3 class="question">What is the execution result of the *checked directive expression?</h3>
