--- a/directive/general.html
+++ b/directive/general.html
@@ -2,7 +2,7 @@
 <div class="content">
   <template *exist="language === 'zhCN'">
     <h3 class="question">一般指令的作用</h3>
-    <div class="answer">一般指令用于绑定宿主元素的普通同名属性。例如，您可以使用“$id”指令绑定宿主元素的id属性，“$src”指令绑定宿主元素的src属性。</div>
+    <div class="answer">一般指令用于绑定宿主元素的普通同名属性。例如，您可以使用“*id”指令绑定宿主元素的id属性，“*src”指令绑定宿主元素的src属性。</div>
     <h3 class="question">一般指令表达式的执行结果</h3>
     <div class="answer">
       一般指令表达式的执行结果将转换为字符串后赋值给宿主元素的同名属性。我们来看示例：
