--- a/directive/result.html
+++ b/directive/result.html
@@ -4,6 +4,7 @@
     <h3 class="question">*result指令的作用</h3>
     <div class="answer">
       <div>*result指令用于绑定本地文件的上传状态和结果，适用于类型为file的input元素。</div>
+      <div>对于其他元素，*result指令将退化为<a href="directive/general" target="_blank">一般指令</a>。</div>
     </div>
     <h3 class="question">*result指令的执行结果</h3>
     <div class="answer">
@@ -40,6 +41,7 @@
     <h3 class="question">What is the usage of the *result directive?</h3>
     <div class="answer">
       <div>*result directive is used to bind the upload status and result of local files, and it is applicable to input elements of type file.</div>
+      <div>For other elements, *result directive degrades to <a href="directive/general" target="_blank">general directive</a>.</div>
     </div>
     <h3 class="question">What is the execution result of the *result directive?</h3>
     <div class="answer">
