--- a/directive/selected.html
+++ b/directive/selected.html
@@ -1,58 +1,94 @@
-<h2>${ $['directive.selected'] }</h2>
 <div class="content">
   <template *exist="language === 'zhCN'">
+    <h2>指令 / *selected</h2>
     <h3 class="question">*selected指令的作用</h3>
-    <div class="answer">*selected指令用于绑定宿主元素的选中值，适用于类型为“radio”和“checkbox”的input元素，以及select元素。</div>
+    <div class="answer">
+      <div>*selected指令用于绑定宿主元素的选中状态，适用于option元素。</div>
+      <div>对于其他元素，*selected指令将退化为<a href="directive/general" target="_blank">一般指令</a>。</div>
+    </div>
     <h3 class="question">*selected指令表达式的执行结果</h3>
     <div class="answer">
-      <div>对于radio元素，当*selected指令表达式的执行结果与宿主元素的value相等时，宿主元素被选中。看下面的例子：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] *selected directive (radio)" src="https://codepen.io/dagger8224/embed/OJQgWZZ?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-          See the Pen <a href="https://codepen.io/dagger8224/pen/OJQgWZZ">
-          [dagger-demo] *selected directive (radio)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+      <div>
+        <div>对于单选下拉框元素，当*selected指令表达式的执行结果为true或者等价于true时，对应的宿主元素处于选中状态。</div>
+        <div>需要注意的是，同一个单选select元素下的option元素的选中状态是互斥的，因此当用户选择了某个option元素时，其兄弟option元素将自动变为非选中态。由于“*selected”指令的双向数据绑定特性，option标签的选中状态变化也会同步修改关联的作用域数据。</div>
+        <div>我们来看一个例子：</div>
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] *value directive (single select)" src="https://codepen.io/dagger8224/embed/vENXPRq?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/vENXPRq">
+          [dagger-demo] *value directive (single select)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
           on <a href="https://codepen.io">CodePen</a>.
         </iframe>
       </div>
-      <div>对于checkbox元素，当*selected指令表达式的执行结果为包含宿主元素value的数组时，宿主元素被选中。看下面的例子：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] *selected directive (checkbox)" src="https://codepen.io/dagger8224/embed/vYdZzZr?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-          See the Pen <a href="https://codepen.io/dagger8224/pen/vYdZzZr">
-          [dagger-demo] *selected directive (checkbox)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
-          on <a href="https://codepen.io">CodePen</a>.
-        </iframe>
-      </div>
-      <div>对于单选下拉框元素，当*selected指令表达式的执行结果与宿主元素下选项的value相等时，此选项元素被选中。看下面的例子：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/ZEryMLQ?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-          See the Pen <a href="https://codepen.io/dagger8224/pen/ZEryMLQ">
-          Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
-          on <a href="https://codepen.io">CodePen</a>.
-        </iframe>
-      </div>
-      <div>对于复选列表框元素，当*selected指令表达式的执行结果为包含宿主元素下选项value的数组时，此选项元素被选中。看下面的例子：
+      <div>对于复选列表框元素，当*selected指令表达式的执行结果为true或者等价于true时，对应的宿主元素处于选中状态。
+        <div>我们来看一个例子：</div>
         <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/xxYradr?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
           See the Pen <a href="https://codepen.io/dagger8224/pen/xxYradr">
           Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
           on <a href="https://codepen.io">CodePen</a>.
         </iframe>
       </div>
-      <div>当*selected指令表达式的内容是合法的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators#%E5%B7%A6%E8%A1%A8%E8%BE%BE%E5%BC%8F">左表达式</a>时，用户对宿主元素的操作将导致表达式计算结果同步变化，实现作用域数据与DOM元素属性之间的的双向绑定。</div>
     </div>
     <h3 class="question">*selected指令的预定义修饰符</h3>
-    <div class="answer">*selected指令支持值为布尔类型的修饰符“oneway”。值为true代表当前指令是单向绑定的，用户对宿主元素的操作不会更新关联的作用域数据。示例如下：
-      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] *selected directive (oneway decorator)" src="https://codepen.io/dagger8224/embed/MWQvjNb?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-        See the Pen <a href="https://codepen.io/dagger8224/pen/MWQvjNb">
-        [dagger-demo] *selected directive (oneway decorator)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+    <div class="answer">*selected指令支持值为布尔类型的修饰符“oneway”。
+      <div>当*selected指令表达式的内容是合法的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators#%E5%B7%A6%E8%A1%A8%E8%BE%BE%E5%BC%8F">左表达式</a>时，用户对宿主元素的操作将导致表达式计算结果同步变化，实现作用域数据与宿主元素状态之间的的双向绑定。</div>
+      <div>如果表达式的内容是不可赋值的，则会导致报错。此时可以使用“oneway”修饰符来禁用双向绑定。</div>
+      示例如下：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] *value directive (oneway decorator)" src="https://codepen.io/dagger8224/embed/bNVwJYY?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/bNVwJYY">
+        [dagger-demo] *value directive (oneway decorator)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
         on <a href="https://codepen.io">CodePen</a>.
       </iframe>
     </div>
-    <h3 class="question">*selected指令与*checked指令的关系</h3>
+    <h3 class="question">*selected指令与select宿主元素上*value指令的关系</h3>
     <div class="answer">
-      <div>*selected指令绑定到选中项的值，而*checked指令绑定的是宿主元素的选中状态。</div>
-      <div>请注意，不要在一个元素上同时声明*selected指令和*checked指令，否则可能导致元素的选中状态与数据不一致。</div>
+      <div>*selected指令绑定到option元素的选中状态，而*value指令绑定到select元素的选中值。</div>
+      <div>二者都是默认具有双向绑定功能的指令，如非必要请不要同时使用*selected和*value指令，否则可能会导致预期外的结果。</div>
+      <div>我们在后文的<a href="directive/value">*value指令</a>章节会演示这两个指令联动关系的例子。</div>
     </div>
   </template>
   <template *exist="language === 'enUS'">
-    <template *each="$['directive.selected.sections']">
-      <h3 class="question">${ item.question }</h3>
-      <div class="answer" *html="item.answer"></div>
-    </template>
+    <h2>Directive / *selected</h2>
+    <h3 class="question">What is the usage of the *selected directive?</h3>
+    <div class="answer">
+      <div>*selected directive is used to bind the selected state of the host element, which is suitable for the option element.</div>
+      <div>For other elements, *selected directive will degrade to <a href="directive/general" target="_blank">general directive</a>.</div>
+    </div>
+    <h3 class="question">What is the execution result of the *selected directive expression?</h3>
+    <div class="answer">
+      <div>
+        <div>For single-select dropdown elements, when the execution result of the *selected directive expression is true or equivalent to true, the corresponding host element is in the selected state.</div>
+        <div>Note that the selected state of the option element in the same single-select select element is mutually exclusive, so when the user selects an option element, its siblings will automatically become non-selected. The "oneway" data binding feature of the *selected directive synchronizes the change of the option tag's selected state with the associated scope data.</div>
+        <div>Let's take a look at an example:</div>
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] *value directive (single select)" src="https://codepen.io/dagger8224/embed/vENXPRq?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/vENXPRq">
+          [dagger-demo] *value directive (single select)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.          
+        </iframe>
+      </div>
+      <div>For multi-select listbox elements, when the execution result of the *selected directive expression is true or equivalent to true, the corresponding host element is in the selected state.
+        <div>Let's take a look at an example:</div>
+        <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/xxYradr?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/xxYradr">
+          Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.
+        </iframe>
+      </div>
+    </div>
+    <h3 class="question">What are the pre-defined decorators of the *selected directive?</h3>
+    <div class="answer">The *selected directive supports the boolean type decorator "oneway".
+      <div>When the content of the *selected directive expression is a valid <a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators#%E5%B7%A6%E8%A1%A8%E8%BE%BE%E5%BC%8F">left expression</a>, user operations on the host element will cause the expression calculation result to be synchronized, enabling the two-way binding of scope data and host element status.</div>
+      <div>If the content of the expression is not assignable, an error will occur. In this case, the "oneway" decorator can be used to disable the two-way binding.</div>
+      For example:
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] *value directive (oneway decorator)" src="https://codepen.io/dagger8224/embed/bNVwJYY?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/bNVwJYY">
+        [dagger-demo] *value directive (oneway decorator)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+    </div>
+    <h3 class="question">What is the relationship between the *selected directive and the *value directive of the select host element?</h3>
+    <div class="answer">
+      <div>*selected directive binds the selected state of the option element, and *value directive binds the selected value of the select element.</div>
+      <div>Both of them are default directives with two-way data binding feature, please avoid using both *selected and *value directives at the same time, otherwise it may cause unexpected side effects.</div>
+      <div>We will demonstrate the examples in the <a href="directive/value">*value directive</a> chapter.</div>
+    </div>
   </template>
 </div>
