--- a/directive/text.html
+++ b/directive/text.html
@@ -1,6 +1,7 @@
-<h2>${ $['directive.text'] }</h2>
+
 <div class="content">
   <template *exist="language === 'zhCN'">
+    <h2>指令 / *text</h2>
     <h3 class="question">*text指令的作用</h3>
     <div class="answer">*text指令用于在宿主元素下动态创建文本内容。</div>
     <h3 class="question">*text指令表达式的执行结果</h3>
@@ -12,7 +13,7 @@
         <div class="margin">1. 如果宿主元素下既有动态文本内容又包含其他子元素，那么您需要使用原地模板字符串而不能使用“*text”指令（否则宿主元素子级节点将被*text指令的执行结果所覆盖）。</div>
         <div class="margin">2. 如果宿主元素为template标签，那么您需要使用原地模板字符串而不能使用“*text”指令。</div>
         <div class="margin">3. 如果指令执行结果是null/undefined/NaN，“*text”指令将结果转为空字符串，而原地模板字符串将打印出对应结果的字符串内容。</div>
-        <div class="margin">4. 如果指令执行结果是一个对象，“*text”指令将结果进行JSON.stringify转换后输出，而原地模板字符串将打印出对象toString之后的结果。</div>
+        <div class="margin">4. 如果指令执行结果是一个对象，“*text”指令将结果进行JSON.stringify转换后输出，而原地模板字符串将打印出对象执行toString方法之后的结果。</div>
         我们来看*text指令的例子：
         <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/poawxye?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
           See the Pen <a href="https://codepen.io/dagger8224/pen/poawxye">
@@ -22,12 +23,31 @@
       </div>
     </div>
     <h3 class="question">*text指令的使用限制</h3>
-    <div class="answer">不要将“*text”指令或者原地模板字符串用于<a href="module/introduction">模块</a>宿主元素。</div>
+    <div class="answer">不要将“*text”指令用于<a href="module/view">视图模块</a>宿主元素。</div>
   </template>
   <template *exist="language === 'enUS'">
-    <template *each="$['directive.text.sections']">
-      <h3 class="question">${ item.question }</h3>
-      <div class="answer" *html="item.answer"></div>
-    </template>
+    <h2>Directive / *text</h2>
+    <h3 class="question">What is the purpose of the *text directive?</h3>
+    <div class="answer">The *text directive is used to dynamically create text content within the host element.</div>
+    <h3 class="question">What is the execution result of the directive expression?</h3>
+    <div class="answer">The execution result of the directive expression is a string.</div>
+    <h3 class="question">What is the relationship between the *text directive and template strings?</h3>
+    <div class="answer">
+      <div>In the example, we have used template strings multiple times to display the execution result. In most cases, the template string node is equivalent to the " *text " directive declared on its parent element.</div>
+      <div>There are some special cases where the handling of the two is different:
+        <div class="margin">1. If the host element has dynamic text content and also contains other child elements, you need to use a template string instead of the " *text " directive (otherwise, the child nodes of the host element will be overwritten by the execution result of the " *text " directive).</div>
+        <div class="margin">2. If the host element is a template tag, you need to use a template string instead of the "*text" directive.</div>
+        <div class="margin">3. If the execution result of the directive is null/undefined/NaN, the " *text " directive will convert the result to an empty string, while the original template string will print the string content of the corresponding result.</div>
+        <div class="margin">4. If the execution result of the directive is an object, the " *text " directive will convert the result to JSON.stringify and output it, while the original template string will print the result of the object after executing the toString method.</div>
+        Let's take a look at the *text directive example:
+        <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/poawxye?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/poawxye">
+          Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.
+        </iframe>
+      </div>
+    </div>
+    <h3 class="question">What are the restrictions on the use of the *text directive?</h3>
+    <div class="answer">Do not use the "*text" directive for the host element of the <a href="module/view">view module</a>.</div>
   </template>
 </div>
